fixed pfp clipping on mobile

--- a/src/style/desktop.css
+++ b/src/style/desktop.css
@@ -24,8 +24,3 @@
   height: 192px;
   box-shadow: 0 0 0 24px var(--background);
 }
-
-#pfc img {
-  width: 192px;
-  height: 192px;
-}
