--- a/src/style/mobile.css
+++ b/src/style/mobile.css
@@ -25,11 +25,6 @@
   box-shadow: 0 0 0 12px var(--background);
 }
 
-#pfc img {
-  width: 100px;
-  height: 100px;
-}
-
 #li {
   display: none;
 }
